Agregar componente Navbar con estilos y funcionalidad, y actualizar la página de inicio con contenido y estructura

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works! dasdasdas</p>
+<main class="container">
+   <h3>Lista de empleados</h3>
+   <p>Bienvenido al apartado de usuarios, aqui podras dar de alta eliminar o editar nuevos usuarios</p>
+
+
+   
+</main>
