--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,21 @@
-<nav>
-   
+<nav class="navbar">
+   <div class="navbar__content">
+      <h1 class="navbar__title">Examen</h1>
+      <ul class="navbar__links">
+         <li>
+            <a class="navbar__link" routerLink="/home" routerLinkActive="active">Inicio</a>
+         </li>
+      </ul>
+   </div>
+
+   <div class="navbar__content">
+      <h3 class="navbar__user--tittle">{{title}}</h3>
+
+      <div class="navbar__avatar">
+         <p>
+            {{title.charAt(0)}}
+         </p>
+      </div>
+
+   </div>
 </nav>
