--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,99 +1,119 @@
 /* You can add global styles to this file, and also import other style files */
-:root{
-   --primary-color: #0d6efd;
-   --secondary-color: #d0d0d0;
-   --success-color: #198754;
-   --danger-color: #dc3545;
-   --warning-color: #ffc107;
-   --info-color: #0dcaf0;
-   --light-color: #f8f9fa;
-   --dark-color: #212529;
-   --font-family: 'Arial', sans-serif;
-   --font-size: 16px;
-   --line-height: 1.5;
-   --border-radius: 0.25rem;
-   --box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-   --TitleSize: 1rem;
-   --ParagraphSize: .9rem;
+:root {
+  --primary-color: rgb(13, 38, 93);
+  --secondary-color: #d0d0d0;
+  --success-color: #198754;
+  --danger-color: #dc3545;
+  --warning-color: #ffc107;
+  --info-color: #0dcaf0;
+  --light-color: #f8f9fa;
+  --dark-color: #11283e;
+  --font-family: 'Arial', sans-serif;
+  --font-size: 16px;
+  --line-height: 1.5;
+  --border-radius: 0.25rem;
+  --box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  --TitleSize: 1rem;
+  --ParagraphSize: .8rem;
 }
 
 
 :where(*) {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
- }
- 
- *, *::before, *::after {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
- }
- 
- html {
-   font-size: 16px;
-   font-family: "Poppins", sans-serif;
-   line-height: 1.5;
-   text-rendering: optimizeLegibility;
-   scroll-behavior: smooth;
- }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
- body {
-   min-height: 100vh;
-   background-color: #f9fafb;
-   color: #2d2d2d;
-   font-size: 1rem;
- }
- 
- a {
-   text-decoration: none;
-   color: inherit;
- }
- 
- ul, ol {
-   list-style: none;
- }
- 
- img, picture, svg {
-   display: block;
-   max-width: 100%;
- }
- 
- :focus-visible {
-   outline: 2px solid #0d6efd;
-   outline-offset: 2px;
- }
- 
- button, input, select, textarea {
-   font: inherit;
-   background: none;
-   border: none;
-   outline: none;
- }
- 
- button {
-   cursor: pointer;
- }
- 
- table {
-   border-collapse: collapse;
-   width: 100%;
- }
- 
- .sr-only {
-   position: absolute;
-   width: 1px;
-   height: 1px;
-   padding: 0;
-   margin: -1px;
-   overflow: hidden;
-   clip: rect(0, 0, 0, 0);
-   border: 0;
- }
- 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
- [class*="container"] {
-   width: 98%;
-   margin:0 auto;
-   padding:1rem;
- }
+html {
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.5;
+  text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
+}
+
+body {
+  min-height: 100vh;
+  background-color: #f9fafb;
+  color: #252525;
+  font-size: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+img,
+picture,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+:focus-visible {
+  outline: 2px solid #0d6efd;
+  outline-offset: 2px;
+}
+
+button,
+input,
+select,
+textarea {
+  font: inherit;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+
+[class*="container"] {
+  width: 96%;
+  margin: 0 auto;
+  padding: 1rem 0;
+}
+
+.title{
+  font-size: calc(var(--TitleSize) + .3rem);
+  font-weight: 600;
+  text-transform: capitalize;
+}
+.paragraph{
+  font-size: var(--ParagraphSize);
+  opacity: .8;
+  line-height: 1.5;
+  max-width:45rem;
+}
