Agregar componente de inicio de sesión, actualizar estilos y contenido de la página de inicio, y mejorar la tabla de usuarios

--- a/src/app/components/form-aside/form-aside.component.html
+++ b/src/app/components/form-aside/form-aside.component.html
@@ -1,6 +1,6 @@
 <aside class="aside" >
    <h3 class="title">{{action}}</h3>
-   <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati</p>
+   <p class="paragraph">Es importante que tengas a la mano los datos del usuario como nombre, puesto, edad, salario, fecha de ingreso.</p>
 
    @if(error()){
       <p class="errors">{{error()}}</p>
