--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,10 +1,9 @@
 <main class="container main__home">
    <section class="section__action">
       <div>
-         <h3 class="title">Lista de usuarios</h3>
+         <h3 class="title">Gestión de Usuarios</h3>
          <p class="paragraph">
-            usuarios, aqui podras dar de alta eliminar o editar nuevos
-            usuarios</p>
+            En esta sección podrás agregar, eliminar o editar usuarios según sea necesario.</p>
       </div>
 
       <button class="section__button" (click)="onAction('agregar')">
