--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -13,6 +13,13 @@
    align-items: center;
    margin-bottom: 1rem;
 }
+@media (max-width: 767px) {
+   .section__action {
+     flex-direction: column; /* Cambia a columna en pantallas pequeñas */
+     align-items: flex-start; /* Alinea los elementos al inicio */
+     gap:1rem;
+   }
+ }
 .section__button{
    display: flex;
    gap: 1rem;
