--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,6 @@
 <nav class="navbar">
    <div class="navbar__content">
-      <h1 class="navbar__title">Examen</h1>
-      <ul class="navbar__links">
-         <li>
-            <a class="navbar__link" routerLink="/home" routerLinkActive="active">Inicio</a>
-         </li>
-      </ul>
+      <h1 class="navbar__title">Examen. </h1>
    </div>
 
    <div class="navbar__content">
